make this into a split calculator (finally)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title> To Do List </title>
+    <title> Split the Bill </title>
 </head>
 
 <body>
@@ -22,20 +22,19 @@
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
 
-                            <h6 class="mb-3">Awesome Todo List</h6>
+                            <h6 class="mb-3">Split the Bill</h6>
 
                             <form class="d-flex justify-content-center align-items-center mb-4">
                                 <div class="form-outline flex-fill">
                                     <input type="text" id="form3" class="form-control form-control-lg"
-                                        placeholder="What do you need to do today?" />
-                                    <!--
-                                    <label class="form-label" for="form3">What do you need to do today?</label>
-                                    -->
+                                        placeholder="Enter price(s) here, numbers only" />
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-lg ms-2">Add</button>
                             </form>
 
                             <ul class="list-group mb-0">
+                                <!-- NEW LIST ITEM STRUCTURE EXAMPLE, checked === false -->
+                                <!--  
                                 <li
                                     class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
                                     <div class="d-flex align-items-center">
@@ -47,6 +46,9 @@
                                         <i class="fas fa-times text-primary"></i>
                                     </a>
                                 </li>
+                                -->
+                                <!-- NEW LIST ITEM STRUCTURE EXAMPLE, checked === true -->
+                                <!-- 
                                 <li
                                     class="list-group-item d-flex d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
                                     <div class="d-flex align-items-center">
@@ -58,50 +60,21 @@
                                         <i class="fas fa-times text-primary"></i>
                                     </a>
                                 </li>
-                                <li
-                                    class="list-group-item d-flex d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                                    <div class="d-flex align-items-center">
-                                        <input class="form-check-input me-2" type="checkbox" value=""
-                                            aria-label="..." />
-                                        Morbi leo risus
-                                    </div>
-                                    <a href="#!" data-mdb-toggle="tooltip" title="Remove item">
-                                        <i class="fas fa-times text-primary"></i>
-                                    </a>
-                                </li>
-                                <li
-                                    class="list-group-item d-flex d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                                    <div class="d-flex align-items-center">
-                                        <input class="form-check-input me-2" type="checkbox" value=""
-                                            aria-label="..." />
-                                        Porta ac consectetur ac
-                                    </div>
-                                    <a href="#!" data-mdb-toggle="tooltip" title="Remove item">
-                                        <i class="fas fa-times text-primary"></i>
-                                    </a>
-                                </li>
-                                <li
-                                    class="list-group-item d-flex d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-0">
-                                    <div class="d-flex align-items-center">
-                                        <input class="form-check-input me-2" type="checkbox" value="" aria-label="..."
-                                            checked />
-                                        Vestibulum at eros
-                                    </div>
-                                    <a href="#!" data-mdb-toggle="tooltip" title="Remove item">
-                                        <i class="fas fa-times text-primary"></i>
-                                    </a>
-                                </li>
+                                -->
+                                <!-- NEW LIST ITEM STRUCTURE EXAMPLE, using id on div tag -->
+                                <!-- 
                                 <li
                                     class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                                    <div class="d-flex align-items-center">
+                                    <div id="item1" class="d-flex align-items-center">
                                         <input class="form-check-input me-2" type="checkbox" value=""
                                             aria-label="..." />
-                                        Morbi leo risus
+                                        Cras justo odio
                                     </div>
                                     <a href="#!" data-mdb-toggle="tooltip" title="Remove item">
                                         <i class="fas fa-times text-primary"></i>
                                     </a>
                                 </li>
+                                -->
                             </ul>
 
                         </div>
