test number type on form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <form class="d-flex justify-content-center align-items-center mb-4">
                                 <div class="form-outline flex-fill">
                                     <span class="input-group-text">$</span>
-                                    <input type="text" id="form3" class="form-control"
+                                    <input type="number" id="form3" class="form-control"
                                         aria-label="Enter price(s) here, numbers only)">
 
                                     <!-- <input type="text" id="form3" class="form-control form-control-lg"
@@ -96,12 +96,15 @@
                             <!-- Tip Buttons -->
                             <div id="tip">
                                 <h6 class="mb-3">Tip</h6>
-                                <button id="first-tax" type="button" class="btn btn-outline-dark"
-                                    value=".15">15%</button>
-                                <button id="second-tax" type="button" class="btn btn-outline-dark"
-                                    value=".18">18%</button>
-                                <button id="third-tax" type="button" class="btn btn-outline-dark"
-                                    value=".20">20%</button>
+                                <button id="tax1" type="button" class="btn btn-outline-dark" value=".15">15%</button>
+                                <button id="tax2" type="button" class="btn btn-outline-dark" value=".18">18%</button>
+                                <button id="tax3" type="button" class="btn btn-outline-dark" value=".20">20%</button>
+
+                                <span class="input-group-text">$</span>
+                                <input type="text" class="form-control"
+                                    aria-label="Dollar amount (with dot and two decimal places)">
+
+
 
                             </div>
 
