update tip calculation to post-tax

--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
                             <!-- Tip Buttons -->
                             <h6 class="mb-3">Tip</h6>
                             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+
+                                <input value=0 type="radio" class="btn-check" name="btnradio" id="btnradio0"
+                                    autocomplete="off">
+                                <label class="btn btn-outline-primary" for="btnradio0">0%</label>
+
                                 <input value=.15 type="radio" class="btn-check" name="btnradio" id="btnradio1"
                                     autocomplete="off">
                                 <label class="btn btn-outline-primary" for="btnradio1">15%</label>
