start work on the custom button

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                                     autocomplete="off">
                                 <label class="btn btn-outline-primary" for="btnradio3">20%</label>
 
-                                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off">
+                                <input value="custom" type="radio" class="btn-check" name="btnradio" id="btnradio4"
+                                    autocomplete="off">
                                 <label class="btn btn-outline-primary" for="btnradio4">Custom</label>
                             </div>
 
