try to work on custom tip calculation, disable some buttons that can be misleading

--- a/index.html
+++ b/index.html
@@ -129,9 +129,25 @@
                                     autocomplete="off">
                                 <label class="btn btn-outline-primary" for="btnradio3">20%</label>
 
-                                <input value="custom" type="radio" class="btn-check" name="btnradio" id="btnradio4"
-                                    autocomplete="off">
+                                <input disabled value="custom" type="radio" class="btn-check" name="btnradio"
+                                    id="btnradio4" autocomplete="off">
                                 <label class="btn btn-outline-primary" for="btnradio4">Custom</label>
+                            </div>
+
+                            <br>
+
+
+                            <div id="custom-tip">
+                                <!-- <form class="d-flex justify-content-center align-items-center mb-4">
+                                    <div class="form-outline flex-fill">
+                                        <span class="input-group-text">$</span>
+                                        <input type="text" id="form3" class="form-control"
+                                            aria-label="Enter price(s) here, numbers only)">
+
+                                    </div>
+                                </form> -->
+
+
                             </div>
 
                             <br>
@@ -170,7 +186,7 @@
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
                                                 data-bs-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Venmo</button>
+                                            <button disabled type="button" class="btn btn-primary">Venmo</button>
                                         </div>
                                     </div>
                                 </div>
