add modal formatting + post and pre tax tip stats

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="vh-100" style="background-color: #e2d5de;">
+    <section class="vh-100" style="background-color: #aaa583;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col col-xl-10">
@@ -153,8 +153,6 @@
                             <br>
                             <br>
 
-
-
                             <!-- Tax Rate -->
                             <div>
                                 <h6 class="mb-3">Sales Tax</h6>
@@ -181,7 +179,7 @@
                                                 aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            $x.xx
+                                            <!-- $x.xx -->
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary"
