finalize custom button, modal modification, itemize separately with commas, space, linefeed

--- a/jic/index.html
+++ b/jic/index.html
@@ -53,7 +53,7 @@
                                 <label class="btn btn-outline-primary" for="btnradio4">Custom</label>
                             </div>
                             <div class="mt-3" id="custom-tip-input" style="display: none;">
-                                <input type="text" id="custom-tip" class="form-control" placeholder="Enter $ amount">
+                                <input type="text" id="custom-tip" class="form-control" placeholder="Enter $">
                             </div>
                             <br>
                             <br>
@@ -78,23 +78,7 @@
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
-                                            <!-- Tabs for pre-tax and post-tax calculations -->
-                                            <ul class="nav nav-tabs" id="calculationTabs" role="tablist">
-                                                <li class="nav-item" role="presentation">
-                                                    <button class="nav-link active" id="pre-tax-tab" data-bs-toggle="tab" data-bs-target="#pre-tax" type="button" role="tab" aria-controls="pre-tax" aria-selected="true">Pre Tax Tip Calculation</button>
-                                                </li>
-                                                <li class="nav-item" role="presentation">
-                                                    <button class="nav-link" id="post-tax-tab" data-bs-toggle="tab" data-bs-target="#post-tax" type="button" role="tab" aria-controls="post-tax" aria-selected="false">Post Tax Tip Calculation</button>
-                                                </li>
-                                            </ul>
-                                            <div class="tab-content" id="calculationTabsContent">
-                                                <div class="tab-pane fade show active" id="pre-tax" role="tabpanel" aria-labelledby="pre-tax-tab">
-                                                    <!-- Pre-tax calculation results will be inserted here -->
-                                                </div>
-                                                <div class="tab-pane fade" id="post-tax" role="tabpanel" aria-labelledby="post-tax-tab">
-                                                    <!-- Post-tax calculation results will be inserted here -->
-                                                </div>
-                                            </div>
+                                            <!-- $x.xx -->
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
