fix modal, filter unnecessary characters on input for seamless copy pasta

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                             <form class="d-flex justify-content-center align-items-center mb-4" id="price-form">
                                 <div class="form-outline flex-fill">
                                     <span class="input-group-text">$</span>
-                                    <input type="text" id="form3" class="form-control"
-                                        aria-label="Enter price(s) here, numbers only">
+                                    <input type="text" id="form3" class="form-control" placeholder="Enter price(s) then press Add" aria-label="Enter price(s) here, numbers only">
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-lg ms-2">Add</button>
                             </form>
@@ -53,7 +52,7 @@
                                 <label class="btn btn-outline-primary" for="btnradio4">Custom</label>
                             </div>
                             <div class="mt-3" id="custom-tip-input" style="display: none;">
-                                <input type="text" id="custom-tip" class="form-control" placeholder="Enter $ amount">
+                                <input type="text" id="custom-tip" class="form-control" placeholder="Enter tip amount in $">
                             </div>
                             <br>
                             <br>
